Fix issue on small device for frontpage header/logo

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -160,6 +160,12 @@
     min-height: initial;
   }
 
+  @media (max-width: map-get($grid-breakpoints, "md")) {
+    .navbar div.logo {
+      width: initial;
+    }
+  }
+
   .card-body {
     box-shadow: none;
     border-top: none;
@@ -191,7 +197,7 @@
     .connect-button {
       border-radius: 3px;
       border: solid 2px var(--white);
-      font-size: x-large;
+      font-size: xx-large;
       font-weight: 600;
       font-style: normal;
       font-stretch: normal;
@@ -199,12 +205,11 @@
       letter-spacing: normal;
       text-align: center;
       font-variant: small-caps;
-      padding: 0.5em 4em;
+      padding: 0.5em 2.5em;
       @media (max-width: map-get($grid-breakpoints, "md")) {
         padding: 0.25em 2em;
       }
     }
-
     min-height: initial;
   }
   #page {
